feat: ESPI 4.0 Schema Compliance - Phase 20: Customer with JAXB Infrastructure (#90)
Completes Phase 20 Customer schema compliance and establishes JAXB infrastructure.

JAXB Infrastructure:
- Domain-specific export services with namespace isolation
- OffsetDateTimeAdapter for unmarshalling support
- CustomerAtomEntryDto and UsageAtomEntryDto for domain isolation
- EspiNamespacePrefixMapper for namespace prefix control
- Converted all DTOs from records to classes

Phase 20 Customer Verification:
- CustomerEntity field order matches customer.xsd
- CustomerDto field order matches customer.xsd
- All embedded objects verified (Organisation, Status, Priority)
- Fixed critical Flyway migration bug (status_value index)

Testing:
- 38 tests passing (unit + integration)
- MySQL 8.0 and PostgreSQL 18 integration tests
- All embedded object persistence verified

Related to #28
Foundation for #89